--- a/hello-world.hbs
+++ b/hello-world.hbs
@@ -1,3 +1,3 @@
-<div class="hello-world">
-  <h1 class="hello-world__heading">{{ heading }}</h1>
+<div class="c-hello-world">
+  <h1 class="c-hello-world__heading">{{ heading }}</h1>
 </div>
